--- a/css/prodotti.css
+++ b/css/prodotti.css
@@ -85,6 +85,8 @@ main {
   box-shadow: 0 4px 12px rgba(0,0,0,0.1);
   cursor: pointer;
   transition: transform 0.2s ease;
+  flex: 0 1 30%; /* circa 3 prodotti per riga */
+  max-width: 300px;
 }
 
 .prodotto:hover {
@@ -123,7 +125,7 @@ main {
 .modal-content {
   background-color: rgba(255, 255, 255, 0.8);
   backdrop-filter: blur(10px);
-  padding: 20px;
+  padding: 10px;
   border-radius: 16px;
   width: 90%;
   max-width: 800px;
@@ -146,7 +148,7 @@ main {
 
 
 .modal-body img {
-  width: 300px;
+  width: 200px;
   max-width: 100%;
   border-radius: 12px;
   object-fit: cover;
@@ -160,7 +162,7 @@ main {
 
 .modal-info h2 {
   margin-top: 0;
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   color: #6e4c9e;
   font-family: 'Playfair Display', serif;
 }
@@ -308,12 +310,17 @@ main {
    padding-top: 80px;
   }
 
+  .prodotto {
+    flex: 0 1 80%; /* prende tutta la larghezza */
+    max-width: 80%;
+  }
+
   .modal-content {
     padding: 10px;
   }
 
   .modal-body img {
-    max-height: 160px;
+    width: 150px;
   }
 
   .modal-info h2 {
